--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.2.0",
+    "serialize-javascript": "2.1.2",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
     "vue-resource": "^1.5.1",
